# holodeck

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
contents/shaders/: basic.frag.glsl  basic.vert.glsl  const.frag.glsl  const.vert.glsl  light.frag.glsl  light.vert.glsl  light_cube.frag.glsl
src/: app.cpp  app.h  camera.h  constants.h  file.cpp  file.h  graphics.h  gui.cpp  gui.h  input.h  loader.cpp  loader.h  log.cpp  log.h  main.cpp  model.cpp  model.h  platform.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.h  texture.h
src/backends/: graphics_opengl.cpp  platform_glfw.cpp  platform_sdl2.cpp
